<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userInput2">

    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="70dp"
        android:text="@string/question2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="300dp"
        android:layout_height="261dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question2">

        <RadioButton
            android:id="@+id/answer6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer6" />

        <RadioButton
            android:id="@+id/answer7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer7" />

        <RadioButton
            android:id="@+id/answer8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer8" />

        <RadioButton
            android:id="@+id/answer9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer9" />

        <RadioButton
            android:id="@+id/answer10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer10" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>